SSDM-12359: Adding --add-opens for java call in dss_client.sh script